--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -1,6 +1,6 @@
 @import '../../App.scss';
 
-.bg-hd-nav{
+.bb-header__nav{
     background-color: $loading-color;
     position: fixed;
     left: 0;
@@ -10,16 +10,19 @@
     height: $nav-height;
     overflow: hidden;
     transition: height ease-in-out 0.5s;
-}
-.bg-hd-nav.on{
-    height: 100vh;
-}
-.bg-hd-nav a{
-    text-decoration: unset;
-    color: black;
+
+    &.on{
+        height: 100vh;
+    }
+    & a{
+        text-decoration: unset;
+        color: black;
+    }
 }
 
-.bg-hd-wrapper{
+
+
+.bb-header__menu--desktop{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,36 +34,36 @@
 
 
 
-.bg-hd-menu{
-    list-style: none;
+.bb-header__menu-detail{
+    & > li{
+        list-style: none;
+    }
 }
-.bg-hd-menu > li{
-    cursor: pointer;
-}
-
-.bg-hd-menu.desktop{
+.bb-header__menu-detail--desktop{
+    @extend .bb-header__menu-detail;
     display: flex;
     margin: 0;
+    & > li{
+        margin-left: 20px;
+    }
 }
-.bg-hd-menu.desktop > li{
-    margin-left: 20px;
-}
-
-.bg-hd-menu.mobile{
+.bb-header__menu-detail--mobile{
+    @extend .bb-header__menu-detail;
     border-top: 1px solid black;
+    & > li{
+        padding: 10px 0;
+        margin: 0 40px;
+        border-bottom: 1px solid black;
+    }
 }
-.bg-hd-menu.mobile > li{
-    padding: 10px 0;
-    margin: 0 40px;
-    border-bottom: 1px solid black;
-}
 
 
-
-.bg-hd-menu-right-icon,
-.bg-hd-menu-mobile-btn{
+.bb-header__menu-toggle{
     display: none;
     cursor: pointer;
+}
+.bb-header__icons--mobile{
+    display: none;
 }
 
 /* Medium Viewport 이하 */
@@ -69,11 +72,39 @@
 }
 /* Small Viewport 이하 */
 @media screen and (max-width: 734px) {
-    .bg-hd-menu.desktop{
+    .bb-header__menu-detail--desktop{
         display: none;
     }
-    .bg-hd-menu-right-icon,
-    .bg-hd-menu-mobile-btn{
+    .bb-header__icons--mobile{
+        display: inherit;
+    }
+    .bb-header__menu-toggle{
         display: inherit;
     }
 }
+
+
+
+
+
+// .bg-hd-menu{
+//     list-style: none;
+// }
+// .bg-hd-menu > li{
+//     cursor: pointer;
+// }
+
+
+// .bg-hd-menu.mobile{
+//     border-top: 1px solid black;
+// }
+// .bg-hd-menu.mobile > li{
+//     padding: 10px 0;
+//     margin: 0 40px;
+//     border-bottom: 1px solid black;
+// }
+
+
+
+
+
