--- a/src/components/board/BoardList.scss
+++ b/src/components/board/BoardList.scss
@@ -4,72 +4,102 @@
     }
 }
 
-.bg-kw-list-img{
+.bb-board-list__image{
     background-color: lightgrey;
     width: 200px;
     height: 200px;
 }
-.bg-kw-list-row{
+@media screen and (max-width: 1068px) {
+    .bb-board-list__image{
+        width: 150px;
+        height: 150px;
+    }
+}
+@media screen and (max-width: 734px) {
+    .bb-board-list__image{
+        width: 120px;
+        height: 120px;
+    }
+}
+
+
+
+.bb-board-list__body{
     cursor: pointer;
     background-color: white;
     padding: 20px;
     margin: 20px auto 0;
     max-width: 800px;
 }
-.bg-kw-list-row-wrapper{
-    display: flex;
-    align-items: center;
-}
-.bg-kw-list-contents{
-    margin-right: 20px;
-}
-.bg-kw-list-desc{
-    margin-top: 10px;
-}
-.bg-kw-list-info{
-    margin-top: 10px;
-    list-style: none;
-    display: flex;
-    & > li{
-        margin-right: 10px;
-    }
-}
-.bg-kw-list-desc-txt{
-    display: -webkit-box;
-    overflow: hidden;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-}
-
-
-/* Medium Viewport 이하 */
-@media screen and (max-width: 1068px) {
-    .bg-kw-list-img{
-        width: 150px;
-        height: 150px;
-    }
-    .bg-kw-list-desc-txt{
-        -webkit-line-clamp: 2;
-    }
-    .bg-kw-list-contents{
-        margin-right: 10px;
-    }
-}
-/* Small Viewport 이하 */
 @media screen and (max-width: 734px) {
-    .bg-kw-list-img{
-        width: 120px;
-        height: 120px;
-    }
-    .bg-kw-list-info{
-        font-size: 13px;
-    }
     .bg-kw-list-row{
         margin: 15px auto 0;
         padding: 15px;
     }
-    .bg-kw-list-contents{
-        margin-right: 0;
+}
+
+
+.bb-board-list__contents-wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.bb-board-list__article{
+    margin-right: 20px;
+    width: calc(100% - 220px);
+    & .desc{
+        margin-top: 10px;
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
     }
+    & .info{
+        margin-top: 10px;
+        list-style: none;
+        display: flex;
+        & > li{
+            margin-right: 10px;
+        }
+    }
+    & .main-title{
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+    }
+    & .sub-title{
+        // 여러 줄 일떄
+        margin-top: 5px;
+        display: -webkit-box;
+        overflow: hidden;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+
+        // 한 줄 일떄
+        // overflow: hidden;
+        // text-overflow: ellipsis;
+        // white-space: nowrap;
+    }
+}
+@media screen and (max-width: 1068px) {
+    .bb-board-list__article{
+        margin-right: 10px;
+        width: calc(100% - 170px);
+        & .desc {
+            -webkit-line-clamp: 2;
+        }
+    }
+}
+@media screen and (max-width: 734px) {
+    .bb-board-list__article{
+        margin-right: 0;
+        width: calc(100% - 130px);
+        & .info{
+            font-size: 13px;
+        }
+    }
+    
 }
 
