--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -8,12 +8,6 @@
     top: 0;
     z-index: 2;
     height: $nav-height;
-    overflow: hidden;
-    transition: height ease-in-out 0.5s;
-
-    &.on{
-        height: 100vh;
-    }
     & a{
         text-decoration: unset;
         color: black;
@@ -47,13 +41,23 @@
         margin-left: 20px;
     }
 }
+
+
 .bb-header__menu-detail--mobile{
     @extend .bb-header__menu-detail;
-    border-top: 1px solid black;
+
+    background-color: lightgray;
+    height: 0;
+    transition: height ease-in-out 0.5s;
+    overflow: hidden;
     & > li{
         padding: 10px 0;
         margin: 0 40px;
         border-bottom: 1px solid black;
+    }
+    &.on{
+        height: 100vh;
+        border-top: 1px solid black;
     }
 }
 
@@ -73,9 +77,6 @@
     .bb-header__menu-detail--desktop{
         display: none;
     }
-    .bb-header__icons--mobile{
-        display: inherit;
-    }
     .bb-header__menu-toggle{
         display: inherit;
     }
@@ -84,7 +85,63 @@
 .bb-header__menu-detail-wrapper{
     display: flex;
 }
-.bb-header__icons{
+
+
+
+
+.bb-header__sub-menu{
     margin-left: 20px;
+    position: relative;
+    
+}
+.bb-header__sub-menu-icon{
     cursor: pointer;
+}
+.bb-header__sub-menu-box{
+    display: none;
+    position: absolute;
+    margin-top: 5px;
+    right: -5px;
+
+    &.on{
+        display: block;
+    }
+
+    & .edge-wrapper{
+        height: 5px;
+        overflow: hidden;
+        padding-top: 2px;
+        // z-index: 1;
+        position: absolute;
+        right: 15px;
+    }
+
+    & .edge{
+        width: 10px;
+        height: 10px;
+        border: 1px solid black;
+        background-color: white;
+        transform: rotate(45deg);
+    }
+
+}
+.bb-header__sub-menu-box-ul{
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    min-width: 100px;
+    margin-top: 6px;
+    padding: 20px;
+    text-align: center;
+
+    & > li{
+        margin-top: 5px;
+        cursor: pointer;
+    }
+    & > li:hover{
+        text-decoration: underline;
+    }
+    & > li:first-child{
+        margin-top: 0px;
+    }
 }
