--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -14,7 +14,10 @@
 }
 .bb-modal__window{
     position: fixed;
-    width: 500px;
+    box-sizing: border-box;
+    width: calc(100% - 30px);
+    max-width: 500px;
+    min-width: calc(320px - 30px);
     z-index: 2;
     background-color: white;
     left: 50%;
@@ -24,6 +27,45 @@
     text-align: center;
     border-radius: 10px;
 }
+.bb-modal__window-close-btn{
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    font-size: 30px;
+    color: grey;
+    cursor: pointer;
+}
+/* Medium Viewport 이하 */
+@media screen and (max-width: 1068px) {
+    .bb-modal__window{
+        padding: 60px 70px;
+    }
+    .bb-modal__window-close-btn{
+        right: 40px;
+        top: 40px;
+    }
+}
+/* Small Viewport 이하 */
+@media screen and (max-width: 734px) {
+    .bb-modal__window{
+        padding: 40px 40px;
+    }
+    .bb-modal__window-close-btn{
+        right: 30px;
+        top: 30px;
+    }
+}
+@media screen and (max-width: 340px) {
+    .bb-modal__window{
+        padding: 20px 20px;
+    }
+    .bb-modal__window-close-btn{
+        right: 20px;
+        top: 20px;
+    }
+}
+
+
 .bb-modal__window-desc{
     margin-top: 10px;
 }
@@ -51,12 +93,4 @@
     & button:not(:only-child):not(:first-child){
         margin-left: 10px;
     }
-}
-.bb-modal__window-close-btn{
-    position: absolute;
-    right: 50px;
-    top: 50px;
-    font-size: 30px;
-    color: grey;
-    cursor: pointer;
 }
