--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -35,6 +35,9 @@
     color: grey;
     cursor: pointer;
 }
+.bb-modal__window-corss-icon{
+    font-size: 35px;
+}
 /* Medium Viewport 이하 */
 @media screen and (max-width: 1068px) {
     .bb-modal__window{
