--- a/src/components/board/BoardView.scss
+++ b/src/components/board/BoardView.scss
@@ -2,7 +2,7 @@
 .bb-board-view__hero-section{
     position: relative;
     min-height: 300px;
-    background-color: lightblue;
+    background-color: aliceblue;
 }
 
 .bb-board-view__hero-section-title-wrapper{
