--- a/src/components/home/Homepage.scss
+++ b/src/components/home/Homepage.scss
@@ -1,14 +1,19 @@
 @import '../../App.scss';
 
-.main{
+.bg-hp-main{
     padding-top: $nav-height;
     padding-bottom: 15px;
 }
-
-.bg-hp-hero{
+.bb-home__hero-wrapper{
     position: relative;
-    max-width: 2560px;
+    max-width: 1920px;
     margin: 0 auto;
+    height: 300px;
+    overflow: hidden;
+}
+.bb-home__hero-item{
+    position: absolute;
+    width: 1920px;
 }
 
 
@@ -18,12 +23,11 @@
 
 .bg-hp-table{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 15px;
-    margin: 0 15px;
 }
 .bg-hp-list.merge-row{
-    grid-column: 1 / span 4;
+    grid-column: 1 / span 3;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,10 +36,10 @@
 /* Medium Viewport 이하 */
 @media screen and (max-width: 1068px) {
     .bg-hp-table{
-        grid-template-columns: 1fr 1fr;
+        margin: 0 15px;
     }
     .bg-hp-list.merge-row{
-        grid-column: 1 / span 2;
+        // grid-column: 1 / span 2;
     }
 }
 /* Small Viewport 이하 */
@@ -58,7 +62,7 @@
 
 .bg-hp-list{
     list-style: none;
-    background-color: grey;
+    border: 2px solid grey;
     min-height: 20vh;
     display: flex;
     text-align: center;
@@ -67,67 +71,90 @@
     justify-content: center;
     padding: 20px;
 }
+.bg-hp-grid{
+    max-width: $max-screen-width;
+    margin-left: auto;
+    margin-right: auto;
+}
 .bg-hp-grid-wrapper{
     margin: 15px auto 0;
     max-width: 1920px;
 }
 
-
-
-
-.bg-hp-copy{
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-    text-align: center;
-    width: 800px;
+.bg-hp-copy-wrapper{
+    @extend .max-screen-width;
 }
-
-/* Medium Viewport 이하 */
+.bg-hp-copy{
+    background-color: white;
+    z-index: 1;
+    position: absolute;
+    text-align: center;
+    padding: 20px 40px;
+    border: 1px solid lightgrey;
+    bottom: 70px;
+}
 @media screen and (max-width: 1068px) {
     .bg-hp-copy{
-        width: 600px;
+        margin-left: 15px;
     }
 }
-/* Small Viewport 이하 */
-@media screen and (max-width: 734px) {
+@media only screen and (max-width: 735px) {
     .bg-hp-copy{
-        width: 100%;
+        bottom: 50%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        margin: 0;
     }
 }
 
-
-
+.bg-hp-hero{
+    position: relative;
+    height: 300px;
+}
 
 // IMAGE
-
+.bg-hp-hero-img-wrapper{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow: hidden;
+    width: 100%;
+}
 .bg-hp-hero-img{
-    width: 2560px;
+    width: 1920px;
     // height: 1440px;
-    height: 720px;
-    background-size: 2560px 1440px;
+    height: 300px;
+    background-size: 1920px 300px;
     background-repeat: no-repeat;
+    background-image: url('../../assets/images/home/hero-image-1.jpg');
     background-color: gray;
 }
-
-@media only screen and (max-width: 1068px) {
-    .bg-hp-hero-img{
-        width: 1920px;
-        // height: 1080px;
-        height: 540px;
-        background-size: 1920px 1080px;
-    }
+.bb-homme__site-intro{
+    // @extend .text-white;
+    // background-size: auto 100%;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-image: url('../../assets/images/home/hero-image-2.jpg');
+    
 }
 
+// @media only screen and (max-width: 1068px) {
+//     .bg-hp-hero-img{
+//         width: 1920px;
+//         // height: 1080px;
+//         height: 540px;
+//         background-size: 1920px 1080px;
+//     }
+// }
 
 
-@media only screen and (max-width: 735px) {
-    .bg-hp-hero-img{
-        width: 1600px;
-        // height: 900px;
-        height: 450px;
-        background-size: 1600px 900px;
-    }
-}
+
+// @media only screen and (max-width: 735px) {
+//     .bg-hp-hero-img{
+//         width: 1600px;
+//         // height: 900px;
+//         height: 450px;
+//         background-size: 1600px 900px;
+//     }
+// }
 
