--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,65 @@
+@font-face {
+  font-family: 'NotoSansKR-Black';
+  src: url("./assets/fonts/NotoSansKR-Black.otf");
+}
+@font-face {
+  font-family: 'NotoSansKR-Bold';
+  src: url("./assets/fonts/NotoSansKR-Bold.otf");
+}
+@font-face {
+  font-family: 'NotoSansKR-Light';
+  src: url("./assets/fonts/NotoSansKR-Light.otf");
+}
+@font-face {
+  font-family: 'NotoSansKR-Medium';
+  src: url("./assets/fonts/NotoSansKR-Medium.otf");
+}
+@font-face {
+  font-family: 'NotoSansKR-Regular';
+  src: url("./assets/fonts/NotoSansKR-Regular.otf");
+}
+@font-face {
+  font-family: 'NotoSansKR-Thin';
+  src: url("./assets/fonts/NotoSansKR-Thin.otf");
+}
+
 body, figure, h1, h2, h3, h4, h5, h6 {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5em;
 }
 
+/* 
+  기본 Regular
+  제목 Bold
+  소제목 Medium 
+*/
+body{
+  font-family: 'NotoSansKR-Regular';
+  word-break: keep-all;
+}
+h1, h2, h3, h4, h5, h6{
+  font-family: 'NotoSansKR-Bold';
+}
+a{
+  text-decoration: none;
+  font-family: 'NotoSansKR-Medium';
+  /* color: #06c; */
+  color: black
+}
+
+a:hover{
+  text-decoration: none;
+}
 ul{
   margin: 0;
   padding: 0;
   list-style: none;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
