--- a/src/components/board/BoardHome.scss
+++ b/src/components/board/BoardHome.scss
@@ -19,8 +19,8 @@
     flex-wrap: wrap;
     & > li{
         cursor: pointer;
-        border: 1px solid $loading-color;
-        color: $loading-color;
+        border: 1px solid lightgrey;
+        color: lightgrey;
         border-radius: 15px;
         padding: 2px 10px;
         font-size: 14px;
