--- a/src/components/board/BoardWrite.scss
+++ b/src/components/board/BoardWrite.scss
@@ -47,7 +47,7 @@
 
 .bb-board-write__editor-wrapper{
     margin-top: 10px;
-    border: 1px solid lightgrey;
+    border: 1px solid black;
     background-color: white;
 }
 .bb-board-write__editor-options{
