--- a/src/components/common/Footer.scss
+++ b/src/components/common/Footer.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 .footer{
-    background-color: $loading-color;
+    background-color: $white;
     font-size: 12px;
 }
 .bg-ft{
