--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,15 @@ $darkgrey: #2e2e2e;
     font-family: 'NotoSansKR-Regular';
 }
 
+.text-light{
+    font-family: 'NotoSansKR-Light';
+}
+
+.text-thin{
+    font-family: 'NotoSansKR-Thin';
+}
+
+
 .text-white {
     color: white;
 }
