--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 .bb-header__nav{
-    border-bottom: 1px solid lightgrey;
+    border-bottom: 1px solid grey;
     background-color: $white;
     color: black;
     min-width: inherit;
