--- a/src/components/board/BoardView.scss
+++ b/src/components/board/BoardView.scss
@@ -1,11 +1,26 @@
-
+.bb-board-view__main{
+    padding-top: 50px;
+}
 .bb-board-view__hero-section{
     position: relative;
     min-height: 300px;
-    background-color: aliceblue;
+    // background-color: aliceblue;
+    background-image: url(/static/media/default_thumbnail.08a1cc29.jpg);
+    background-size: auto 100%;
+    background-position: center;
+
+    &::after{
+        content: '';
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: white;
+        opacity: 0.5;
+    }
 }
 
 .bb-board-view__hero-section-title-wrapper{
+    z-index: 1;
     width: 100%;
     max-width: 600px;
     position: absolute;
@@ -17,12 +32,8 @@
 .bb-board-view__subtitle{
     margin: 0 15px;
 }
-
-.bb-board-view__article-setcion{
-    margin-top: 15px;
-}
 .bb-board-view__article{
-    max-width: 800px;
+    max-width: 1068px;
     margin: 0 auto;
     padding: 0 15px;
 }
@@ -38,9 +49,30 @@
 .bb-board-view__update-btns{
     display: flex;
     justify-content: flex-end;
-    max-width: 800px;
+    max-width: 1068px;
     margin: 0 auto;
+
     & li:not(:only-child):not(:first-child){
-        margin-left: 10px;
+        margin-left: 20px;
     }
+    & > li{
+        cursor: pointer;
+    }
+    & button{
+        all: unset;
+    }
+}
+
+.bb-board-view__article-section{
+    margin-top: 30px;
+    padding: 0 15px;
+    min-height: 30vh;
+}
+.bb-board-view__buttons-section{
+    margin-top: 30px;
+    padding: 0 15px;
+}
+.bb-board-view__tresh-icon,
+.bb-board-view__pencil-icon{
+    font-size: 25px;
 }
