--- a/src/components/board/BoardWrite.scss
+++ b/src/components/board/BoardWrite.scss
@@ -2,13 +2,25 @@
 
 .bb-board-write__main{
     padding-top: 50px;
-    padding-bottom: 15px;
-    background-color: rgba(210, 210, 210, 0.15);
+    // background-color: rgba(210, 210, 210, 0.15);
+}
+.bb-board-write__form-section{
+    margin: 80px 0;
+    padding: 0 15px;
+}
+@media screen and (max-width: 1068px) {
+    .bb-board-write__form-section{
+        margin: 60px 0;
+    }
+}
+@media screen and (max-width: 414px) {
+    .bb-board-write__form-section{
+        margin: 40px 0;
+    }
 }
 .bb-board-write__form{
     max-width: 600px;
-    margin: 30px auto;
-    padding: 0 15px;
+    margin: 0px auto;
     & .tui-editor-defaultUI{
         margin-top: 10px;
         // max-width: 500px;
@@ -24,25 +36,21 @@
     }
 }
 .bb-board-write__title{
+    font-size: 16px;
     width: 100%;
     box-sizing: border-box;
-    padding: 10px 25px;
-    font-size: 13px;
+    padding: 15px;
     margin: 0;
-}
-.bb-board-write__title--sub{
-    @extend .bb-board-write__title;
-    margin-top: 10px;
 }
 
 .bb-board-write__buttons{
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
-    & button{
+
+    & > button{
         cursor: pointer;
-        width: 49.5%;
-        font-size: 15px;
+        width: 50%;
         font-weight: bold;
         background-color: white;
         border: 1px solid black;
@@ -51,10 +59,16 @@
     & button:hover{
         background-color: lightgrey;
     }
+    & > button:first-child{
+        margin-right: 7.5px;
+    }
+    & > button:last-child{
+        margin-left: 7.5px;
+    }
 }
 
 .bb-board-write__editor-wrapper{
-    margin-top: 10px;
+    margin-top: 15px;
     border: 1px solid black;
     background-color: white;
 }
@@ -76,9 +90,6 @@
     & >li.on{
         border: 1px solid lightgrey;
     }
-    & > li:hover{
-        border: 1px solid lightgrey;
-    }
     & svg{
         font-size: 20px;
     }
@@ -96,12 +107,31 @@
         }
     }
 }
+
+@media screen and (max-width: 414px) {
+    .bb-board-write__editor-options{
+        position: -webkit-sticky;
+        position: sticky;
+        top: 50px;
+        background-color: white;
+    }
+}
 .bb-board-wrtie__editor{ 
     border: unset;
     padding: 15px;
     width: 100%;
     box-sizing: border-box;
-    min-height: 300px;
+    min-height: 400px;
+}
+@media screen and (max-width: 1068px) {
+    .bb-board-wrtie__editor{ 
+        min-height: 350px;
+    }
+}
+@media screen and (max-width: 414px) {
+    .bb-board-wrtie__editor{ 
+        min-height: 300px;
+    }
 }
 
 
@@ -132,20 +162,19 @@
 
 .bb-board-write__tags-wrapper{
     @extend .text-bold;
-    margin-top: 8px;
+    margin-top: 15px;
     & > span{
         cursor: pointer;
         display: inline-block;
         font-size: 14px;
         color: grey;
         border: 1px solid grey;
-        border-radius: 8px;
+        border-radius: 5px;
         margin-right: 10px;
         padding: 2px 8px;
         background-color: white;
     }
-    & > span.on,
-    & > span:hover{
+    & > span.on{
         background-color: #dce0ef;
     }
 }
@@ -163,12 +192,13 @@
         color: white;
         border: 1px solid black;
         height: 40px;
+        font-size: 15px;
     }
 }
 
 .bb-board-write__image-tiles{
     display: none;
-    margin-top: 20px;
+    margin-top: 15px;
 
     &.on{
         display: inherit;
@@ -201,4 +231,7 @@
             font-size: 35px;
         }
     }
+}
+.bb-board-write__editor-placeholder{
+    color: lightgray;
 }
