--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .bb-modal__body{
     display: none;
     &.on{
@@ -16,14 +18,14 @@
     position: fixed;
     box-sizing: border-box;
     width: calc(100% - 30px);
-    max-width: 500px;
+    max-width: 400px;
     min-width: calc(320px - 30px);
     z-index: 2;
     background-color: white;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    padding: 60px 80px;
+    padding: 40px;
     text-align: center;
     border-radius: 10px;
 }
@@ -38,52 +40,41 @@
 .bb-modal__window-corss-icon{
     font-size: 35px;
 }
-/* Medium Viewport 이하 */
-@media screen and (max-width: 1068px) {
+@media screen and (max-width: 414px) {
     .bb-modal__window{
-        padding: 60px 70px;
-    }
-}
-/* Small Viewport 이하 */
-@media screen and (max-width: 734px) {
-    .bb-modal__window{
-        padding: 40px 40px;
-    }
-}
-@media screen and (max-width: 340px) {
-    .bb-modal__window{
-        padding: 20px 20px;
+        padding: 30px;
     }
     .bb-modal__window-close-btn{
-        right: 20px;
-        top: 20px;
+        right: 10px;
+        top: 10px;
+    }
+    .bb-modal__window-corss-icon{
+        font-size: 30px;
     }
 }
 
 
 .bb-modal__window-desc{
-    margin-top: 10px;
+    margin-top: 15px;
 }
 .bb-modal__window-btns{
-    margin-top: 20px;
+    max-width: 300px;
+    margin: 20px auto 0;
     display: none;
     &.on{
         display: inherit;
     }
     & button{
+        @extend .text-bold;
         width: calc(50% - 5px);
-        height: 50px;
+        height: 45px;
         background-color: black;
         color: white;
         font-weight: bold;
         border: 1px solid black;
         border-radius: 2px;
         cursor: pointer;
-        font-size: 17px;
-    }
-    & button:hover{
-        background-color: white;
-        color: black;
+        font-size: 15px;
     }
     & button:not(:only-child):not(:first-child){
         margin-left: 10px;
