--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body, figure, h1, h2, h3, h4, h5, h6 {
     sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 1.5em;
+  line-height: 1.5em; 
 }
 
 /* 
@@ -41,6 +41,7 @@ body, figure, h1, h2, h3, h4, h5, h6 {
 body{
   font-family: 'NotoSansKR-Regular';
   word-break: keep-all;
+  font-size: 16px;
 }
 h1, h2, h3, h4, h5, h6{
   font-family: 'NotoSansKR-Bold';
@@ -63,4 +64,7 @@ ul{
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+button{
+  font-size: inherit;
 }
