--- a/src/components/common/Login.scss
+++ b/src/components/common/Login.scss
@@ -39,18 +39,20 @@
 .bb-login__input-wrapper{
     display: flex;
     flex-direction: column;
-    margin-top: 40px;
+    margin-top: 25px;
 
     & > input{
         font-size: 20px;
         text-align: center;
-        padding: 10px;
-        border: unset;
-        border-bottom: 2px solid black;
+        padding: 0 10px;
+        height: 40px;
+        border: 1px solid lightgrey;
+        border-radius: 5px;
+        margin-top: 15px;
     }
 
-    & > input:last-child{
-        margin-top: 10px;
+    & > input:first-child{
+        margin-top: unset;
     }
 }
 @media screen and (max-width: 414px) {
@@ -68,19 +70,22 @@
     border: 1px solid black;
     background-color: black;
     width: 100%;
+    height: 50px;
     color: white;
-    margin-top: 25px;
-    padding: 12px 0;
-    font-size: 20px;
+    margin-top: 20px;
+    font-size: 18px;
+    border-radius: 5px;
 }
 
 .bb-login__mode-toggle{
+    font-size: 14px;
+    color: grey;
     position: relative;
-    margin-top: 25px;
+    margin-top: 30px;
     display: flex;
     border: 1px solid black;
-    height: 40px;
-    border-radius: 20px;
+    height: 35px;
+    border-radius: 16.5px;
     box-sizing: border-box;
     align-items: center;
 
@@ -98,11 +103,11 @@
     align-items: center;
     position: absolute;
     width: 50%;
-    height: 40px;
+    height: 100%;
     box-sizing: border-box;
     background-color: black;
     color: white;
-    border-radius: 20px;
+    border-radius: 16.5px;
     transition: left 0.5s;
     left: 0;
     &.on{
